<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
       >

        <!-- SINGLE CHILD -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/colorPrimary">

            <!-- HEADER -->
            <TextView
                android:id="@+id/logTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:text="@string/login_to_your_account"
                android:textColor="@color/White"
                android:textSize="@dimen/_22sdp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/img"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_200sdp"
                android:layout_gravity="center"
                android:src="@drawable/ic_chef"
                />

            <!-- WHITE CURVE CONTAINER -->
            <LinearLayout
                android:id="@+id/authenticatecontainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="-40dp"
                android:background="@drawable/curve"
                android:backgroundTint="@color/White"
                android:orientation="vertical"
                android:padding="@dimen/_15sdp">

                <ImageView
                    android:id="@+id/logLogo"
                    android:layout_width="@dimen/_60sdp"
                    android:layout_height="@dimen/_60sdp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_logo"
                    tools:ignore="ContentDescription" />

                <!-- EMAIL -->
                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@color/transparent"
                    android:hint="@string/email"
                    android:drawableStart="@drawable/mail"
                    android:padding="@dimen/_10sdp"
                    tools:ignore="Autofill" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/Gray" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:layout_marginTop="@dimen/_8sdp">

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/transparent"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:padding="@dimen/_10sdp"
                        android:paddingEnd="@dimen/_40sdp"
                        tools:ignore="Autofill" />

                    <ImageView
                        android:id="@+id/eyeBtn"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="12dp"
                        android:src="@drawable/ic_eye_hide" />
                </RelativeLayout>


                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/Gray" />

                <!-- LOGIN BUTTON -->
                <Button
                    android:id="@+id/logInBtn"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:background="@drawable/custom_border"
                    android:text="@string/sign_in"
                    android:textAllCaps="false" />
                <TextView
                    android:id="@+id/forgotPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_gravity="end"
                    android:text="Forgot password?"
                    android:textColor="@color/colorPrimary" />

                <!-- OR CONTINUE -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_gravity="center"
                    android:visibility="gone"
                    android:text="@string/or_continue_with"
                    android:textColor="@color/Black" />

                <!-- SOCIAL BUTTONS -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:visibility="gone"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/fbBtn"
                        android:layout_width="@dimen/_56sdp"
                        android:layout_height="@dimen/_40sdp"
                        android:padding="@dimen/_10sdp"
                        android:layout_marginEnd="@dimen/_20sdp"
                        android:background="@drawable/custom_textview"
                        android:src="@drawable/fb_logo" />

                    <ImageView
                        android:id="@+id/googleImg"
                        android:layout_width="@dimen/_56sdp"
                        android:padding="@dimen/_10sdp"

                        android:layout_height="@dimen/_40sdp"
                        android:background="@drawable/custom_textview"
                        android:src="@drawable/google" />
                </LinearLayout>

                <!-- SIGN UP -->
                <TextView
                    android:id="@+id/signUpBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_gravity="center"
                    android:text="@string/sign_up"
                    android:textColor="@color/LightGrey" />

            </LinearLayout>

            <!-- LOADER -->
            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/loader"
                android:layout_width="@dimen/_60sdp"
                android:layout_height="@dimen/_60sdp"
                android:layout_gravity="center"
                android:visibility="gone"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/loder" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</layout>
